# device-can

./: Attribution.txt  CHANGELOG.md  Jenkinsfile  Makefile  OWNERS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
res/: configuration.yaml
res/devices/: devices.json
res/profiles/: can-profile.yaml
scripts/: Dockerfile.alpine  Dockerfile.alpine-base  build.sh  build_deps.sh
src/: CMakeLists.txt
src/c/: device-can.c  device-can.h
